<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:id="@+id/tv_dashboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_title"
            style="@style/TitleText"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/tv_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello, User!"
            style="@style/SubtitleText"
            android:layout_marginBottom="18dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DashboardCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_next_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_period_title"
                    style="@style/CardTitleText" />

                <TextView
                    android:id="@+id/tv_next_period_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="In 5 days"
                    style="@style/CardContentText" />

                <TextView
                    android:id="@+id/tv_fertile_window"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertile_window_title"
                    style="@style/CardTitleText"
                    android:layout_marginTop="12dp"/>

                <TextView
                    android:id="@+id/tv_fertile_window_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nov 5 - Nov 10"
                    style="@style/CardContentText"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
